<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AppPortfolio">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify"
        android:id="@+id/spotifyBtn"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:onClick="sendSpotifyToast"
        android:background="@color/button_bg"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/scoreBtn"
        android:layout_alignEnd="@+id/scoreBtn"
        android:layout_alignLeft="@+id/scoreBtn"
        android:layout_alignStart="@+id/scoreBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:id="@+id/scoreBtn"
        android:onClick="sendScoreToast"
        android:background="@color/button_bg"
        android:layout_below="@+id/spotifyBtn"
        android:layout_alignRight="@+id/libraryBtn"
        android:layout_alignEnd="@+id/libraryBtn"
        android:layout_alignLeft="@+id/libraryBtn"
        android:layout_alignStart="@+id/libraryBtn"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:id="@+id/libraryBtn"
        android:onClick="sendLibraryToast"
        android:background="@color/button_bg"
        android:layout_below="@+id/scoreBtn"
        android:layout_alignRight="@+id/buildBtn"
        android:layout_alignEnd="@+id/buildBtn"
        android:layout_alignLeft="@+id/buildBtn"
        android:layout_alignStart="@+id/buildBtn"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build"
        android:id="@+id/buildBtn"
        android:onClick="sendBuildToast"
        android:background="@color/button_bg"
        android:layout_below="@+id/libraryBtn"
        android:layout_alignRight="@+id/baconBtn"
        android:layout_alignEnd="@+id/baconBtn"
        android:layout_alignLeft="@+id/baconBtn"
        android:layout_alignStart="@+id/baconBtn"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bacon"
        android:id="@+id/baconBtn"
        android:onClick="sendBaconToast"
        android:background="@color/button_bg"
        android:layout_below="@+id/buildBtn"
        android:layout_alignRight="@+id/ownBtn"
        android:layout_alignEnd="@+id/ownBtn"
        android:layout_alignLeft="@+id/ownBtn"
        android:layout_alignStart="@+id/ownBtn"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/own"
        android:id="@+id/ownBtn"
        android:onClick="sendOwnToast"
        android:elegantTextHeight="true"
        android:textColor="@color/own_text_color"
        android:background="@color/own_button_bg"
        android:padding="10dp"
        android:layout_below="@+id/baconBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_zero"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:textSize="20dp" />

</RelativeLayout>
